added other savegame method to environment